--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "node ./compile.js",
-    "test": "mocha"
+    "test": "mocha",
+    "deploy": "node ./deploy.js"
   },
   "keywords": [
     "ethereum",
@@ -15,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "solc": "^0.4.19",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.29"
   },
   "devDependencies": {
